# rtm-sdk

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: publish.yml
bash/: README.md  example.sh  raptoreum.sh
clojure/: README.md  project.clj
clojure/src/: raptoreum.clj
cpp/: README.md  example.cpp
cpp/include/: raptoreum_client.hpp
cpp/src/: raptoreum_client.cpp
csharp/: RaptoreumSdk.sln
csharp/RaptoreumSdk/: RaptoreumClient.cs  RaptoreumSdk.csproj
dart/: README.md
docs/: api_reference.md  audit.md  docker_setup.md  index.md  integration_guide.md  publishing_guide.md  versioning.md  whitepaper.md
elixir/: README.md  example.exs  mix.exs
erlang/: README.md
erlang/src/: example.erl  raptoreum.erl
fsharp/: RaptoreumSdk.sln
fsharp/RaptoreumSdk.Example/: Program.fs  RaptoreumSdk.Example.fsproj
go/: client.go  go.mod
go/example/: main.go
haskell/: README.md
haskell/src/: Raptoreum.hs
java/: pom.xml
javascript/: README.md
javascript/src/: index.js
julia/: README.md
julia/src/: Raptoreum.jl
kotlin/: README.md  build.gradle.kts
lua/: README.md  raptoreum.lua
perl/: Makefile.PL  README.md  example.pl
php/: README.md  composer.json  example.php
powershell/: README.md  example.ps1
python/: README.md  setup.py
r_lang/: DESCRIPTION  README.md  example.R  raptoreum.R
ruby/: rtm-sdk.gemspec
rust/: README.md
rust/src/: lib.rs  main.rs
scala/: README.md
scripts/: bump_version.py
sdk/: README.md
sdk/bash/: raptoreum.sh
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/: raptoreum_client.hpp  raptoreum_tx.hpp
sdk/cpp/src/: raptoreum_client.cpp  raptoreum_tx.cpp
sdk/csharp/: README.md
sdk/dart/: pubspec.yaml
sdk/fsharp/: README.md
sdk/go/: README.md  client.go  go.mod  transaction.go  wallet.go  ws.go  zmq.go
sdk/haskell/: rtm-sdk.cabal
sdk/haskell/app/: Main.hs
sdk/haskell/src/: Raptoreum.hs
sdk/java/: README.md
sdk/javascript/: example.js  package.json  rtm-sdk-1.0.0.tgz
sdk/julia/: Project.toml  example.jl
sdk/lua/: example.lua  raptoreum.lua  rtm-sdk-scm-1.rockspec
sdk/powershell/: RaptoreumClient.psm1
sdk/python/: example.py  raptoreum.py
sdk/r_lang/: raptoreum.R
sdk/ruby/: README.md  example.rb
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  transaction.rs  wallet.rs
sdk/scala/: build.sbt
sdk/swift/: Package.swift
sdk/typescript/: package-lock.json  package.json  tsconfig.json
swift/: README.md
swift/Example/: main.swift
typescript/: README.md  package.json
(+30 files in other folders)
