cabal-version:      2.4
name:               rtm-sdk
version:            1.0.0
synopsis:           Official Haskell SDK for Raptoreum (RTM) JSON-RPC API
homepage:           https://github.com/Raptor3um/rtm-sdk
license:            MIT
author:             Raptoreum Developers
maintainer:         dev@raptoreum.com
category:           Web

library
    exposed-modules:  Raptoreum
    build-depends:    base >= 4.14 && < 5,
                      aeson >= 2.0,
                      http-conduit >= 2.3,
                      bytestring >= 0.10,
                      base64-bytestring >= 1.2,
                      text >= 1.2
    hs-source-dirs:   src
    default-language: Haskell2010

executable rtm-example
    main-is:          Main.hs
    build-depends:    base,
                      text,
                      rtm-sdk
    hs-source-dirs:   app
    default-language: Haskell2010
