[package]
name = "rtm-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Raptoreum Developers <dev@raptoreum.com>"]
description = "Official Rust SDK for Raptoreum (RTM) JSON-RPC API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
