[package]
name = "rtm-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Raptoreum Developers <dev@raptoreum.com>"]
description = "Official Rust SDK for Raptoreum (RTM) JSON-RPC API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
ripemd = "0.1.3"
sha2 = "0.10.6"
rand = "0.8"
bs58 = "0.5.0"
